--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "electron .",
     "postinstall": "electron-builder install-app-deps",
-    "dist": "electron-builder --win"
+    "dist": "electron-builder",
+    "dist:mac": "electron-builder --mac --universal"
   },
   "author": "深圳市观麦网络科技有限公司",
   "license": "ISC",
@@ -39,6 +40,9 @@
           ]
         }
       ],
+      "icon": "icon/icon.png"
+    },
+    "mac": {
       "icon": "icon/icon.png"
     },
     "nsis": {
