--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "electron .",
     "postinstall": "electron-builder install-app-deps",
-    "dist": "electron-builder",
+    "dist": "electron-builder --win",
     "dist:mac": "electron-builder --mac --universal"
   },
   "author": "深圳市观麦网络科技有限公司",
