--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "dependencies": {
     "electron-updater": "^6.3.4",
-    "serialport": "^12.0.0"
+    "serialport": "^12.0.0",
+    "win32-pdf-printer": "^5.0.0"
   },
   "build": {
     "appId": "cn.guanmai.x.erp",
